--- a/dz_6/task.ipynb
+++ b/dz_6/task.ipynb
@@ -10,6 +10,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma = 16    \n",
+    "p = 0.95\n",
+    "m = 80\n",
+    "n = 256\n",
+    "alpha = 0.05\n",
+    "z = stats.norm.ppf(alpha/2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Формула нахождения доверительного интервала  \n",
+    "$\\displaystyle\\bar X\\pm z_{\\alpha/2}\\cdot\\frac{\\sigma}{\\sqrt n}$   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Доверительный интервал: [78.04 ; 81.96].\n"
+     ]
+    }
+   ],
+   "source": [
+    "l_border=80-1.96*16/256**0.5\n",
+    "r_border=80+1.96*16/256**0.5\n",
+    "print(f'>>> Доверительный интервал: [{l_border} ; {r_border}].')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -17,6 +69,40 @@
     "2.В результате 10 независимых измерений некоторой величины X, выполненных с одинаковой точностью, получены опытные данные:\n",
     "6.9, 6.1, 6.2, 6.8, 7.5, 6.3, 6.4, 6.9, 6.7, 6.1\n",
     "Предполагая, что результаты измерений подчинены нормальному закону распределения вероятностей, оценить истинное значение величины X при помощи доверительного интервала, покрывающего это значение с доверительной вероятностью 0,95."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 10\n",
+    "X = np.array([6.9, 6.1, 6.2, 6.8, 7.5, 6.3, 6.4, 6.9, 6.7, 6.1])\n",
+    "M = X.mean()\n",
+    "std = X.std(ddof=1)\n",
+    "alpha = 0.05\n",
+    "t = stats.t.ppf(1-alpha/2, df=n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6.27, 6.91)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(round(M - t * std / n ** 0.5, 2), round(M + t * std / n ** 0.5, 2))"
    ]
   },
   {
@@ -28,11 +114,96 @@
     "Рост матерей  178, 165, 165, 173, 168, 155, 160, 164, 178, 175\n",
     "Используя эти данные построить 95% доверительный интервал для разности среднего роста родителей и детей."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mothers = np.array([178, 165, 165, 173, 168, 155, 160, 164, 178, 175])\n",
+    "daughters = np.array([175, 167, 154, 174, 178, 148, 160, 167, 169, 170])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Интервальная оценка для разности средних арифметических по формуле: \n",
+    " \n",
+    "$\\bar{x}_1 - \\bar{x}2 \\pm t{\\frac{\\alpha}{2}} \\sqrt{\\frac{s_1^2}{n_1} + \\frac{s_2^2}{n_2}}$\n",
+    "\n",
+    "где:  \n",
+    "$\\bar{x}_1$ - среднее арифметическое в группе 1  \n",
+    "$\\bar{x}2$ - среднее арифметическое в группе 2  \n",
+    "$s_1^2$ - дисперсия в группе 1  \n",
+    "$s_2^2$ - дисперсия в группе 2  \n",
+    "$n_1$ - число элементов в группе 1  \n",
+    "$n_2$ - число элементов в группе 2  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_1 = np.mean(mothers)\n",
+    "x_2 = np.mean(daughters)\n",
+    "delta = x_1 - x_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = len(mothers)\n",
+    "D1 = np.var(mothers, ddof = 1)\n",
+    "D2 = np.var(daughters, ddof = 1)\n",
+    "D = (D1 + D2) / 2\n",
+    "SE = np.sqrt(D/n + D/n)\n",
+    "t = stats.t.ppf(0.975, 2 * (n - 1))\n",
+    "result = (delta - t*SE, delta + t*SE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95% доверительный интервал для разности среднего роста родителей и детей = (-6.268418034506846, 10.068418034506857)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"95% доверительный интервал для разности среднего роста родителей и детей = {result}\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
