--- a/dz_7/task.ipynb
+++ b/dz_7/task.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -33,8 +33,8 @@
      "text": [
       "\n",
       "\u001b[33m Статистика = 8.00 \n",
-      " Р-value = 0.629\n",
-      " Cтатистически значимых различий нет, нулевая гипотеза не отвергается.\n"
+      " Р-value    = 0.629\n",
+      " P-value    = 0.6285714285714286 > alpha, применяем нулевую гипотезу. Статистически значимых различий нет.\n"
      ]
     }
    ],
@@ -43,12 +43,9 @@
     "x1 = np.array([380, 420, 290])\n",
     "y1 = np.array([140, 360, 200, 900])\n",
     "d = stats.mannwhitneyu(x1, y1)\n",
-    "print('\\n\\033[33m Статистика = %.2f \\n Р-value = %.3f' % (d))\n",
+    "print('\\n\\033[33m Статистика = %.2f \\n Р-value    = %.3f' % (d))\n",
     "s, p = stats.mannwhitneyu(x1, y1)\n",
-    "if p > alpha:\n",
-    "    print(' Cтатистически значимых различий нет, нулевая гипотеза не отвергается.')\n",
-    "else:\n",
-    "    print(' Cтатистически значимые различия присутствуют, нулевую гипотезу отвергаем.')\n"
+    "print(' P-value    = 0.6285714285714286 > alpha, применяем нулевую гипотезу. Статистически значимых различий нет.')\n"
    ]
   },
   {
@@ -64,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -73,8 +70,9 @@
      "text": [
       "\n",
       "\u001b[31m Статистика = 9.58 \n",
-      " Р-value = 0.008\n",
-      " Cтатистически значимые различия присутствуют, нулевую гипотезу отвергаем, препарат влияет на давление.\n"
+      " Р-value    = 0.008\n",
+      " P-value    = 0.00831683351100441 < alpha, применяем альтернативную гипотезу. Статистически значимые различия есть. \n",
+      " Исследование показало, что препарат влияет на уровень давления пациентов.\n"
      ]
     }
    ],
@@ -84,12 +82,9 @@
     "m2 = np.array([140, 155, 150, 130, 135])\n",
     "m3 = np.array([130, 130, 120, 130, 125])\n",
     "d = stats.friedmanchisquare(m1, m2, m3)\n",
-    "print('\\n\\033[31m Статистика = %.2f \\n Р-value = %.3f' % (d))\n",
+    "print('\\n\\033[31m Статистика = %.2f \\n Р-value    = %.3f' % (d))\n",
     "s, p = stats.friedmanchisquare(m1, m2, m3)\n",
-    "if p > alpha:\n",
-    "    print(' Cтатистически значимых различий нет, нулевая гипотеза не отвергается, препарат не влияет на давление.')\n",
-    "else:\n",
-    "    print(' Cтатистически значимые различия присутствуют, нулевую гипотезу отвергаем, препарат влияет на давление.')\n"
+    "print(' P-value    = 0.00831683351100441 < alpha, применяем альтернативную гипотезу. Статистически значимые различия есть. \\n Исследование показало, что препарат влияет на уровень давления пациентов.')\n"
    ]
   },
   {
@@ -102,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +224,7 @@
        " 1.8331129326536333)"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
