--- a/dz_8/task.ipynb
+++ b/dz_8/task.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "9157.839999999997"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "9157.840000000002"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "0.8874900920739163"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "0.8874900920739162"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "0.8874900920739162"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "(7.543916348412745, 2.2621571627409915)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -329,39 +329,62 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 199,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "172.31398912064722"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Используем $z$-критерий и формулу для среднего арифмитического:    \n",
-    "$\\overline{X}\\underline{+}z\\frac{\\alpha}{2}*\\frac{\\sigma}{\\sqrt{n}}$ "
+    "min = 174.2 - (1.96 * 25**0.5) / 27**0.5\n",
+    "min"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "176.08601087935276"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max = 174.2 + (1.96 * 25**0.5) / 27**0.5\n",
+    "max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Доверительный интервал для математического ожидания с надежностью 0.95 составляет: 147.30; 201.10\n"
+      "Доверительный интервал для математического ожидания с надежностью 0.95 составляет: 172.31; 176.09\n"
      ]
     }
    ],
    "source": [
-    "var = 25\n",
-    "n = 27\n",
-    "mean = 174.2\n",
-    "std = (var)**0.5\n",
-    "alpha = 0.05\n",
-    "z = stats.norm.ppf(1-alpha/2, n-1)\n",
-    "d = z*std/(n)**0.5\n",
-    "min = mean - d\n",
-    "max = mean + d\n",
-    "print(\n",
-    "    f\"Доверительный интервал для математического ожидания с надежностью 0.95 составляет:{min: .2f};{max: .2f}\")\n"
+    "print(f'Доверительный интервал для математического ожидания с надежностью 0.95 составляет:{min: .2f};{max: .2f}')"
    ]
   }
  ],
