--- a/dz_10/task.ipynb
+++ b/dz_10/task.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "football_players = np.array([173, 175, 180, 178, 177, 185, 183, 182])\n",
+    "hockey_players = np.array([177, 179, 180, 188, 177, 172, 171, 184, 180])\n",
+    "weightlifters = np.array(\n",
+    "    [172, 173, 169, 177, 166, 180, 178, 177, 172, 166, 170])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha=0.05 "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Проверим данные на нормальность распределения"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ShapiroResult(statistic=0.9775082468986511, pvalue=0.9495404362678528)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.shapiro(football_players)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ShapiroResult(statistic=0.9579196572303772, pvalue=0.7763139009475708)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.shapiro(hockey_players)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ShapiroResult(statistic=0.9386808276176453, pvalue=0.5051165223121643)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.shapiro(weightlifters)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#$p-value$ для каждой выборки больше $\\alpha$ - принимаем, что данные распределены нормально.  \n",
+    "\n",
+    "Проверим равенство дисперсий."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BartlettResult(statistic=0.4640521043406442, pvalue=0.7929254656083131)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.bartlett(football_players, hockey_players, weightlifters)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$p-value$ для каждой выборки больше $\\alpha$ - принимаем, что дисперсии равны.  \n",
+    "\n",
+    "Теперь можно провести однофакторный дисперсионный анализ.  \n",
+    "Сформулируем гипотезы:  \n",
+    "$H0:\\mu_{1}=\\mu_{2}=\\mu_{3}$        -  различия среднего роста среди взрослых футболистов, хоккеистов и штангистов нет  \n",
+    "$H1:\\mu_{1}\\neq\\mu_{2}\\neq\\mu_{3}$  -  различия среднего роста среди взрослых футболистов, хоккеистов и штангистов есть\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "F_onewayResult(statistic=5.500053450812596, pvalue=0.010482206918698693)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.f_oneway(football_players, hockey_players, weightlifters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "F_onewayResult(statistic=5.500053450812596, pvalue=0.010482206918698693)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.f_oneway(football_players, hockey_players, weightlifters)"
+   ]
   }
  ],
  "metadata": {
